[package]
name = "bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bench-macros = { path = "./macros" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["process"] }
memory-stats = "1.1.0"

[[bench]]
name = "test_bench"
harness = false
