[package]
name = "miden-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miden-vm = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.6.1" }
miden-processor = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.6.1", features = ["concurrent"] }
miden-stdlib = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.6.1" }

[dev-dependencies]
bench = { path = "../bench" }

[[bench]]
harness = false
name = "bench"
