[package]
name = "miden-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miden-vm = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.6.1" }
miden-processor = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.6.1" }
miden-stdlib = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.6.1" }
miden-prover = { git = "https://github.com/0xPolygonMiden/miden-vm", tag = "v0.6.1" }
miden-crypto = "0.6"
zstd = "0.12.4"
shared = { path = "../shared", features = ["std"] }

[dev-dependencies]
bench = { path = "../bench" }


[features]
default = []
multi-cpu = ["miden-processor/concurrent"]
metal = ["miden-prover/metal"]

[[bench]]
harness = false
name = "bench"
