[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miden-crypto = "0.6"
fastrand = "2"
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = "1"
risc0-zkvm = { version = "0.17.0", default-features = false }
