[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.17.0", optional = true }
serde = "1.0"

[dev-dependencies]
bench = { path = "../../bench" }

[[bench]]
name = "bench"
harness = false

[features]
default = ["default-deps"]

default-deps = ["risc0-zkvm"]

# For macOS
[target.'cfg(target_os = "macos")'.dependencies]
risc0-zkvm = { version = "0.17.0", features = ["metal"] }
