[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
methods = { path = "../methods" }
risc0-zkvm = { version = "0.17.0" }
serde = "1.0"
zstd = "0.12.4"
shared = { path = "../../shared", features = ["std"] }

[dev-dependencies]
bench = { path = "../../bench" }

[[bench]]
name = "bench"
harness = false

[features]
default = []
metal = ["risc0-zkvm/metal"]
cuda = ["risc0-zkvm/cuda"]
