[package]
# TODO: Rename this package to change the method name from METHOD_NAME
name = "method_name"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.17.0", default-features = false }
crypto = { package = "miden-crypto", version = "0.6", default-features = false }
blake3 = { version = "1.4.1", default-features = false }
